# prompt-clinica

./: .gitignore  README.md  db.py  fluxo.mermaid  fluxo2.mermaid  pyproject.toml  repositories.py  teste_db.py
.kiro/specs/marcar-consulta/: .config.kiro  design.md  requirements.md
.kiro/steering/: diretrizes.md  product.md  structure.md  tech.md
.usaer-spec/: Especificacao-Dashboard-Agenda.md  Especificacao-Projeto-MultiMed.md  Interface Inteligente de Prontuário Eletrônico com IA e Voz.md
angular/multi-med/: README.md  angular.json  package-lock.json  package.json
angular/multi-med/src/: index.html  styles.css
angular/multi-med/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
angular/multi-med/src/app/guards/: auth.guard.ts
angular/multi-med/src/app/layouts/main-layout/: main-layout.component.css  main-layout.component.html  main-layout.component.ts
angular/multi-med/src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
angular/multi-med/src/app/pages/landing/: landing.component.css  landing.component.html  landing.component.ts
angular/multi-med/src/app/pages/login/: login.component.css  login.component.html  login.component.ts
angular/multi-med/src/app/pages/registro-consulta/: registro-consulta.component.css  registro-consulta.component.html  registro-consulta.component.ts
angular/multi-med/src/environments/: environment.development.ts  environment.ts
migrations/versions/: 045a0c9aa5c6_init_schema.py  55977980300d_inicial.py
models/: __init__.py  base.py  classes.mermaid  common.py  entities.py
python/: classe.mermaid  db.py  fluxo.mermaid  fluxoCadastro.mermaid  pyproject.toml  repositories.py  sequence_Diagram.mermaid  teste_db.py
python/migrations/: env.py
python/models/: base.py  classes.mermaid  common.py
python/scripts/: check_code.py  check_db.py  seed_postgres.sql
python/src/: core_logic.py  web_api.py
python/src/ia/: cadastro_handler.py  consulta_handler.py  graph.py  prompt.py  state.py
src/: README.md  atendimento.py  main.py  main_embedings.py  web_api.py
src/ia/: cadastro_handler.py  consulta_handler.py  graph.py  llm_config.py  prompt.py  state.py  tools.py
src/ia/rag/: especialidade_rag.py  procedimento_rag.py
src/scripts/: check_db.py
